# BrowserSelector

./: CMakeLists.txt  README.md
cmake/: toolchain-mingw.cmake
src/: main.cpp
